# feup-aed-proj1

./: Apresentação.pptx  CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile
docs/html/: airline_8cpp_source.html  airline_8h_source.html  airport_8cpp_source.html  airport_8h_source.html  annotated.html  annotated_dup.js  bst_8h_source.html  carriage_8cpp_source.html  carriage_8h_source.html  class_airline-members.html  class_airline.html  class_airline.js  class_airport-members.html  class_airport.html  class_airport.js  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_binary_node-members.html  class_binary_node.html  class_carriage-members.html  class_carriage.html  class_carriage.js  class_cleaning_service-members.html  class_cleaning_service.html  class_cleaning_service.js  class_flight-members.html  class_flight.html  class_flight.js  class_flight_plan-members.html  class_flight_plan.html  class_flight_plan.js  class_land_transport_place-members.html  (+50 more)
docs/latex/: airline_8cpp_source.tex  airline_8h_source.tex  airport_8cpp_source.tex  annotated.tex  (+40 more)
includes/: airline.h  airport.h  bst.h  carriage.h  flight.h  luggage.h  luggageTransport.h  menu.h  passenger.h  plane.h  ticket.h
src/: airline.cpp  airport.cpp  carriage.cpp  flight.cpp  luggage.cpp  luggageTransport.cpp  menu.cpp  passenger.cpp  plane.cpp  ticket.cpp
(+37 files in other folders)
